upload the program

--- a/program.html
+++ b/program.html
@@ -6,12 +6,12 @@ keyword: environment conference, biofuels conference, desalination conference, w
 ---
 
 <div class="unit unit-s-1 unit-m-1-4-1 unit-l-1-4-1">
-  <div class="unit-spacer content">
-    <p class="body">The Conference Program for the 9<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'19) will be available soon. We appreciate your patience!</p>
+ <!-- <div class="unit-spacer content">
+    <p class="body">The Conference Program for the 9<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'19) will be available soon. We appreciate your patience!</p>-->
 
-    <!-- <p class="body">The Conference Program for the 9<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'19) is now available! Please follow the link below to access the program:</p> -->
+     <p class="body">The Conference Program for the 9<sup>th</sup> International Conference on Environmental Pollution and Remediation (ICEPR'19) is now available! Please follow the link below to access the program:</p> 
 
-    <!-- <p align="center"><a href="../NewTech18_Program.pdf" class="body-link">NewTech18 Program</a></p>  -->
+    <p align="center"><a href="https://2019.newtechcongress.com/program/" class="body-link">NewTech10 Program</a></p>  
 
   </div>
   </div>
