--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@ keyword: environment conference, biofuels conference, desalination conference, w
 
         <a href="http://avestia.com" target="_blank"><img src="../img/Avestia_Logo.png" alt="Avestia" style="max-width:150px; float:left; "></a>
 
-         <a href="http://where2submit.com" target="_blank"><img src="../img/W2S_logo.png" alt="Where2Submit" style="max-width:230px; float:left; margin-top: 50px;"></a>
+
+         <a href="http://where2submit.com" target="_blank"><img src="../img/W2S_logo.png" alt="Where2Submit" style="max-width:230px; float:left; margin-top: 50px;"></a>  <a href="http://nature.com" target="_blank"><img src="../img/NatureSustainability.jpg" alt="Nature Sustainability" style="max-width:200px; float:left; margin-top: 50px;"></a>
+
         <div class="cf"></div>
       </div>
 
